--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -28,6 +28,8 @@
                 <button type="submit" class="btn btn-default">搜索</button>
             </form>
             <ul class="nav navbar-nav navbar-right">
+                <li><a href="/publish" th:if="${session.user!=null}">提问</a></li>
+                <li><a href="#" th:if="${session.user!=null}">通知<span class="badge">0</span> </a></li>
                 <li class="dropdown" th:if="${session.user!=null}">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
                        aria-expanded="false" th:text="${session.user.getName()}"> <span class="caret"></span></a>
@@ -51,22 +53,22 @@
 
             <h2><span class="glyphicon glyphicon-plus" aria-hidden="true"></span>发起</h2>
             <hr>
-            <form action="">
+            <form action="/publish" method="post">
                 <div class="form-group">
                     <label for="title">问题标题(简单扼要)</label>
-                    <input type="text" class="form-control" id="title" placeholder="问题标题_">
+                    <input type="text" class="form-control" th:value="${title}" id="title" name="title" placeholder="问题标题_">
                 </div>
                 <div class="form-group">
-                    <label for="title">问题补充(必填,请参照右侧提示)</label>
-                    <textarea name="description" id="description" class="form-control" cols="30" rows="10"></textarea>
+                    <label for="description">问题补充(必填,请参照右侧提示)</label>
+                    <textarea name="description" id="description" th:text="${description}" class="form-control" cols="30" rows="10"></textarea>
                 </div>
                 <div class="form-group">
                     <label for="tag">添加标签</label>
-                    <input type="text" class="form-control" id="tag" name="tag" placeholder="输入标签,以,号分隔">
+                    <input type="text" class="form-control" th:value="${tag}" id="tag" name="tag" placeholder="输入标签,以,号分隔">
                 </div>
                 <button type="submit" class="btn btn-success btn-publsh">发布</button>
-
             </form>
+            <div class="alert alert-danger" role="alert" th:text="${error}" th:if="${error!=null}"></div>
         </div>
         <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
             <h3>问题发起指南</h3>
