--- a/src/main/resources/static/css/community.css
+++ b/src/main/resources/static/css/community.css
@@ -22,3 +22,10 @@ body{
     font-weight: normal;
     color: #999;
 }
+.community-menu{
+    color: #999;
+    font-size: 12px;
+}
+.heard-name{
+    margin-top: 9px;
+}
