--- a/src/main/resources/templates/common.html
+++ b/src/main/resources/templates/common.html
@@ -18,7 +18,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <form class="navbar-form navbar-left">
                     <div class="form-group">
-                        <input th:label="" type="text" class="form-control" placeholder="搜索问题">
+                        <input type="text" class="form-control" placeholder="搜索问题">
                     </div>
                     <button type="submit" class="btn btn-default">搜索</button>
                 </form>
@@ -45,33 +45,34 @@
 </div>
 
 <!--分页-->
-<nav th:fragment="page" aria-label="Page navigation">
-    <ul class="pagination">
-        <li th:if="${pagination.isShowFirstPage()}">
-            <a th:href="@{./{section}(page=${1},section=${section})}" aria-label="Previous">
-                <span aria-hidden="true">&laquo;</span>
-            </a>
-        </li>
-        <li th:if="${pagination.isShowPrevious()}">
-            <a th:href="@{./{section}(page=${pagination.page}-1,section=${section})}" aria-label="Previous">
-                <span aria-hidden="true">&lt;</span>
-            </a>
-        </li>
-        <li th:each="page:${pagination.pages}" th:class="${pagination.page==page}?'active':''">
-            <a th:href="@{./{section}(page=${page},section=${section})}" th:text="${page}"></a>
-        </li>
-        <li th:if="${pagination.isShowNext()}">
-            <a th:href="@{./{section}(page=${pagination.page}+1,section=${section})}" aria-label="Next" >
-                <span aria-hidden="true">&gt;</span>
-            </a>
-        </li>
-        <li>
-            <a th:href="@{./{section}(page=${pagination.getTotalPage()},section=${section})}"  aria-label="Next" th:if="${pagination.isShowEndPage()}">
-                <span aria-hidden="true">&raquo;</span>
-            </a>
-        </li>
-    </ul>
-</nav>
-</body>
+    <nav th:fragment="page" aria-label="Page navigation">
+        <ul class="pagination">
 
+            <li th:if="${pageInfo.pageNum}-2>0">
+                <a th:href="@{./{section}(page=${pageInfo.navigateFirstPage},section=${section})}" aria-label="Previous">
+                    <span aria-hidden="true">&laquo;</span>
+                </a>
+            </li>
+            <li th:if="${pageInfo.hasPreviousPage}">
+                <a th:href="@{./{section}(page=${pageInfo.prePage},section=${section})}" aria-label="Previous">
+                    <span aria-hidden="true">&lt;</span>
+                </a>
+            </li>
+
+            <li th:each="nav:${pageInfo.navigatepageNums}" th:class="${pageInfo.pageNum==nav}?'active':''">
+                <a th:href="@{./{section}(page=${nav},section=${section})}" th:text="${nav}"></a>
+            </li>
+            <li th:if="${pageInfo.hasNextPage}">
+                <a th:href="@{./{section}(page=${pageInfo.nextPage},section=${section})}" aria-label="Next" >
+                    <span aria-hidden="true">&gt;</span>
+                </a>
+            </li>
+            <li>
+                <a th:href="@{./{section}(page=${pageInfo.navigateLastPage},section=${section})}"  aria-label="Next" th:if="${pageInfo.pageNum}+1<${pageInfo.navigateLastPage}">
+                    <span aria-hidden="true">&raquo;</span>
+                </a>
+            </li>
+        </ul>
+    </nav>
+</body>
 </html>
