--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -3,11 +3,11 @@
 <head>
     <title>谁家小孩天天哭</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="../static/css/community.css">
-    <script src="js/jQuery-2.24.js" type="application/javascript"></script>
-    <script src="js/bootstrap.min.js" type="application/javascript"></script>
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="/css/community.css">
+    <script src="/js/jQuery-2.24.js" type="application/javascript"></script>
+    <script src="/js/bootstrap.min.js" type="application/javascript"></script>
 </head>
 <body>
 <nav th:insert="common::head"></nav>
@@ -18,6 +18,7 @@
             <h2><span class="glyphicon glyphicon-plus" aria-hidden="true"></span>发起</h2>
             <hr>
             <form action="/publish" method="post">
+                <input type="hidden" name="id" th:value="${id}">
                 <div class="form-group">
                     <label for="title">问题标题(简单扼要)</label>
                     <input type="text" class="form-control" th:value="${title}" id="title" name="title" placeholder="问题标题_">
@@ -30,7 +31,13 @@
                     <label for="tag">添加标签</label>
                     <input type="text" class="form-control" th:value="${tag}" id="tag" name="tag" placeholder="输入标签,以,号分隔">
                 </div>
-                <button type="submit" class="btn btn-success btn-publsh">发布</button>
+                <div class="row">
+                    <div class="col-lg-10 col-md-12 col-sm-12 col-xs-12"></div>
+                    <div class="col-lg-10 col-md-12 col-sm-12 col-xs-12">
+                        <button type="submit" class="btn btn-success btn-publsh">发布</button>
+                    </div>
+                </div>
+
             </form>
             <div class="alert alert-danger" role="alert" th:text="${error}" th:if="${error!=null}"></div>
         </div>
